--- a/dotf-hs.cabal
+++ b/dotf-hs.cabal
@@ -69,6 +69,7 @@ library
     , process
     , string-interpolate
     , text
+    , text-zipper
     , typed-process
     , unordered-containers
     , vector
@@ -105,6 +106,7 @@ executable dotf-hs-exe
     , process
     , string-interpolate
     , text
+    , text-zipper
     , typed-process
     , unordered-containers
     , vector
@@ -142,6 +144,7 @@ test-suite dotf-hs-test
     , process
     , string-interpolate
     , text
+    , text-zipper
     , typed-process
     , unordered-containers
     , vector
