finished code restructure

--- a/dotf-hs.cabal
+++ b/dotf-hs.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,14 +25,12 @@ source-repository head
 
 library
   exposed-modules:
-      Control.Dotf.Commands
-      Control.Dotf.Commands.Bundles
-      Control.Dotf.Commands.Git
-      Control.Dotf.Commands.Os
-      Data.Dotf
-      Data.Dotf.Bundles
-      Data.Dotf.Os
-      Data.Dotf.Templates
+      Dotf.Bundles
+      Dotf.Commands
+      Dotf.Git
+      Dotf.Templates
+      Dotf.Types
+      Dotf.Utils
       Tui
       Tui.Event.Bundles
       Tui.Event.Dotfiles
