--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                dotf-hs
-version:             0.2.0.0
+version:             0.3.0.0
 github:              "abjoru/dotf-hs"
 license:             BSD-3-Clause
 author:              "Andreas Bjoru"
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/abjo
 
 dependencies:
 - base >= 4.7 && < 5
+- extra
 - bytestring
 - typed-process
 - directory
@@ -40,6 +41,7 @@ dependencies:
 - mtl
 - vector
 - text-zipper
+- optparse-applicative
 
 default-extensions:
 - OverloadedStrings
@@ -61,7 +63,7 @@ library:
   source-dirs: src
 
 executables:
-  dotf-hs-exe:
+  dotf:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
