--- a/package.yaml
+++ b/package.yaml
@@ -70,6 +70,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -optP-Wno-nonportable-include-path
     dependencies:
     - dotf-hs
 
