--- a/dotf-hs.cabal
+++ b/dotf-hs.cabal
@@ -35,6 +35,7 @@ library
       Tui
       Tui.Event.Bundles
       Tui.Event.Dotfiles
+      Tui.Event.Filter
       Tui.Event.Ignore
       Tui.Event.NewBundle
       Tui.Events
@@ -68,6 +69,7 @@ library
     , optparse-applicative
     , os-release
     , process
+    , regex-pcre
     , string-interpolate
     , text
     , text-zipper
@@ -107,6 +109,7 @@ executable dotf
     , optparse-applicative
     , os-release
     , process
+    , regex-pcre
     , string-interpolate
     , text
     , text-zipper
@@ -147,6 +150,7 @@ test-suite dotf-hs-test
     , optparse-applicative
     , os-release
     , process
+    , regex-pcre
     , string-interpolate
     , text
     , text-zipper
