--- a/package.yaml
+++ b/package.yaml
@@ -20,7 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/abjoru/dotf-hs#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+- base
 - extra
 - bytestring
 - typed-process
