--- a/dotf-hs.cabal
+++ b/dotf-hs.cabal
@@ -58,7 +58,7 @@ library
       OverloadedStrings
       TemplateHaskell
       QuasiQuotes
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-imports -Werror
   build-depends:
       ConfigFile
     , MissingH
@@ -100,7 +100,7 @@ executable dotf
       OverloadedStrings
       TemplateHaskell
       QuasiQuotes
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -optP-Wno-nonportable-include-path
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-imports -Werror -threaded -rtsopts -with-rtsopts=-N -optP-Wno-nonportable-include-path
   build-depends:
       ConfigFile
     , MissingH
@@ -146,7 +146,7 @@ test-suite dotf-hs-test
       OverloadedStrings
       TemplateHaskell
       QuasiQuotes
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-imports -Werror -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       ConfigFile
     , MissingH
