--- a/package.yaml
+++ b/package.yaml
@@ -62,6 +62,8 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -Wunused-imports
+- -Werror
 
 library:
   source-dirs: src
