--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -37,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: dotf-binary
-        path: .local/bin/dotf
+        path: /Users/runner/.local/bin/dotf
